# rmkernel

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
inc/: os.h  os_defs.h  os_mem.h  os_msg.h  os_util.h  state_machine.h
ports/arm-cortex-m4/: port.c
src/: os.c  os_mem.c  os_msg.c  os_util.c  state_machine.c
tools/: format.sh
